# Sistema-estudo-tecProg

./: CMakeLists.txt  run.sh
include/: aluno.hpp  departamento.hpp  disciplina.hpp  pessoa.hpp  principal.hpp  professor.hpp  stdafx.hpp  universidade.hpp
src/: aluno.cpp  departamento.cpp  disciplina.cpp  main.cpp  pessoa.cpp  principal.cpp  professor.cpp  universidade.cpp
